Added csv import/export tests